fix: Compilation error